[gd_scene load_steps=4 format=3 uid="uid://bcn4ynpvxpnfe"]

[ext_resource type="Script" path="res://Scripts/steam.gd" id="1_r7i07"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_sycmc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io3mv"]
bg_color = Color(0.160784, 0.160784, 0.160784, 0.658824)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sycmc")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -15.5
offset_right = 22.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Host"

[node name="JoinButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 66.5
offset_right = 60.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = " Join "

[node name="LobbyContainer" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -477.0
offset_top = -270.0
offset_right = 477.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_io3mv")

[node name="Lobbies" type="VBoxContainer" parent="LobbyContainer"]
layout_mode = 2

[node name="NoLobbies" type="Label" parent="LobbyContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "No Lobbies :("

[node name="Steam" type="Node" parent="."]
script = ExtResource("1_r7i07")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="RefreshButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -53.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Refresh"

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -53.0
offset_right = 127.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="UI/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
